@@ -5,7 +5,7 @@ JDK_UPDATE_VERSION = 04
 COMBINED_VERSION = $(JDK_UPDATE_VERSION)-$(OPENJDK_VERSION)
 
 CORBA_CHANGESET = c628aeb3d72f
-HOTSPOT_CHANGESET = b1dfb460ee5c
+HOTSPOT_CHANGESET = 2967c7838b7a
 JAXP_CHANGESET = 9b7a2f21b8a8
 JAXWS_CHANGESET = 9ae185bd7ff2
 JDK_CHANGESET = 1aea8312412a
@@ -13,7 +13,7 @@ LANGTOOLS_CHANGESET = 54b1383d794c
 OPENJDK_CHANGESET = 3a0fd3cc84a0
 
 CORBA_SHA256SUM = b176cf1fd8a461413ab822236753cf455210e97c11a8d4224929582607c212b4
-HOTSPOT_SHA256SUM = 43d83d5209a9f748e6650c792ca8ef8d9a90d6e3c53e461993c6bffb8c37e972
+HOTSPOT_SHA256SUM = ea07bbffa5ce566efa4f7955983315bee006b0e60f7eacb36d14710e5da61b58
 JAXP_SHA256SUM = 4d38e8a0fc0fcbe3ba8a56f9fc0960ecbf15cd4cef44b76fdc82418c008a33c3
 JAXWS_SHA256SUM = 60c6c62c851eafc15ff33e58aa625e6f58fd31f15328b121602a07891fc1d272
 JDK_SHA256SUM = 1d5f1b7a5d9f8be06105130aa1c0f1898e9b91fb8d968d7ccb21d2b365575802
@@ -430,7 +430,8 @@ ICEDTEA_ENV = \
 	BUILD_CPP="$(CXX)" \
 	USE_SYSTEM_CUPS="true" \
 	CUPS_LIBS="${CUPS_LIBS}" \
-	CUPS_CFLAGS="${CUPS_CFLAGS}"
+	CUPS_CFLAGS="${CUPS_CFLAGS}" \
+	ALT_STRIP_POLICY=no_strip
 
 if ENABLE_CACAO
 ICEDTEA_ENV += \
